# ucv_ate_si_laboratorios

./: README.md
.github/workflows/: sonarqube.yml
Sesion8/: .gitignore  index.html  pyproject.toml
Sesion8/agente_ucv/: agent.py
Sesion8/agente_ucv/.adk/: session.db
