[project]
name = "sesion8"
version = "0.1.0"
description = ""
authors = [
    {name = "marcovidal12",email = "marco.xd.vidal@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "google-adk (>=2.1.0,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
